SUBDIRS = alignment aspectframe box buttonbox \
          buttons clipboard combo combobox drag_and_drop dialogs drawingarea entry eventbox expander frame \
          idle helloworld helloworld2 \
          idle label menus notebook paned progressbar range_widgets \
          scrolledwindow signals spinbutton table textview timeout toolbar treeview

EXTRA_DIST = README

