include $(top_srcdir)/examples/Makefile.am_fragment

# Build the executable, but don't install it.
noinst_PROGRAMS = cellrenderertoggle testpopup

cellrenderertoggle_SOURCES = cellrenderertoggle.cc
testpopup_SOURCES = popupentry.cc popupentry.h cellrendererpopup.cc cellrendererpopup.h cellrendererlist.cc cellrendererlist.h testpopup.cc

